# simple-sqlalchemy

./: .gitignore  BOOLEAN_FILTER_FIX.md  DOCUMENTATION.md  ENHANCED_BASECRUD_IMPLEMENTATION.md  ENHANCED_BASECRUD_IMPLEMENTATION_COMPLETE.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  run_all_tests.py  run_tests.py  setup.py  validate_integration.py
docs/: CHANGELOG.md  CONTRIBUTING.md  MIGRATION.md  README.md  advanced_features.rst  conf.py  examples.rst  index.rst  quickstart.rst  requirements.txt  string_schema.rst  string_schema_integration.md
docs/_static/: custom.css
docs/api/: core.rst  helpers.rst
examples/: 01_quick_start.py  02_string_schema_operations.py  03_traditional_sqlalchemy.py  04_advanced_features.py  05_postgresql_features.py  06_real_world_application.py  README.md  advanced_usage.py
examples_old/: basic_usage.py  enhanced_crud_examples.py  m2m_efficiency_demo.py  m2m_soft_delete_application_level.py
scripts/: build_docs.py
simple_sqlalchemy/: __init__.py  base.py  client.py  crud.py  session.py
simple_sqlalchemy/helpers/: __init__.py  m2m.py  pagination.py  search.py  string_schema.py
simple_sqlalchemy/postgres/: __init__.py  types.py  utils.py
tests/: README.md  __init__.py  conftest.py  requirements.txt  test_base.py  test_client.py  test_crud.py  test_helpers.py  test_integration.py  test_m2m_efficiency.py  test_m2m_strategy_selection.py  test_news_integration.py  test_runner.py  test_session.py  test_string_schema.py  test_string_schema_advanced.py  test_string_schema_not_null.py  test_timezone_handling.py
