[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-sqlalchemy"
version = "0.1.0"
description = "A simplified, enhanced SQLAlchemy package with common patterns and utilities"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Simple SQLAlchemy Contributors", email = "contributors@simple-sqlalchemy.dev"}
]
maintainers = [
    {name = "Simple SQLAlchemy Contributors", email = "contributors@simple-sqlalchemy.dev"}
]
keywords = ["sqlalchemy", "orm", "database", "crud", "pagination", "search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
requires-python = ">=3.8"
dependencies = [
    "sqlalchemy>=1.4.0,<3.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
postgres = [
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.1.0",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
    "sphinx-autodoc-typehints>=1.12.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=2.0.0",
]


[project.urls]
Homepage = "https://github.com/simple-sqlalchemy/simple-sqlalchemy"
Documentation = "https://simple-sqlalchemy.readthedocs.io/"
Repository = "https://github.com/simple-sqlalchemy/simple-sqlalchemy"
"Bug Tracker" = "https://github.com/simple-sqlalchemy/simple-sqlalchemy/issues"

[tool.setuptools]
packages = ["simple_sqlalchemy", "simple_sqlalchemy.helpers", "simple_sqlalchemy.postgres"]

[tool.setuptools.package-data]
simple_sqlalchemy = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pgvector.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=simple_sqlalchemy",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "postgres: marks tests that require PostgreSQL",
]

[tool.coverage.run]
source = ["simple_sqlalchemy"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
